--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<script src="js/lightSource.js"></script>
 	<script src="js/shaders/idle_vs.essl"></script>
 	<script src="js/shaders/solid_fs.essl"></script>
-	<script src="js/shaders/shadow_fs.essl"></script>
+	<script src="js/shaders/shiny_fs.essl"></script>
 	<script src="js/AzAuto.js"></script>
 	<script src="js/PerspectiveCamera.js"></script>
 	<script src="js/GameObject.js"></script>
