--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
 	<script src="js/Shader.js"></script>
 	<script src="js/lightSource.js"></script>
 	<script src="js/shaders/idle_vs.essl"></script>
+	<script src="js/shaders/sky_vs.essl"></script>
 	<script src="js/shaders/solid_fs.essl"></script>
+	<script src="js/shaders/mirror_fs.essl"></script>
 	<script src="js/shaders/wood_fs.essl"></script>
 	<script src="js/shaders/shiny_fs.essl"></script>
 	<script src="js/shaders/shadow_fs.essl"></script>
+	<script src="js/shaders/sky_fs.essl"></script>
+
 	<script src="js/AzAuto.js"></script>
 	<script src="js/PerspectiveCamera.js"></script>
 	<script src="js/GameObject.js"></script>
