fixed the sky quad geometry

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<script src="js/Mesh.js"></script>
 	<script src="js/Material.js"></script>
 	<script src="js/MultiMesh.js"></script>
+	<script src="js/QuadGeometry.js"></script>
 	<script src="js/TexturedQuadGeometry.js"></script>
 	<script src="js/TexturedIndexedTrianglesGeometry.js"></script>
 	<script src="js/Texture2D.js"></script>
