chessboard completed and refraction working

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 	<script src="js/PerspectiveCamera.js"></script>
 	<script src="js/GameObject.js"></script>
+	<script src="js/Chess.js"></script>
 	<script src="js/Mesh.js"></script>
 	<script src="js/Material.js"></script>
 	<script src="js/MultiMesh.js"></script>
