--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
 	<script src="js/shaders/shadow_fs.essl"></script>
 	<script src="js/shaders/sky_fs.essl"></script>
 
+	<script src="js/AzAuto.js"></script>
 	<script src="js/PerspectiveCamera.js"></script>
 	<script src="js/GameObject.js"></script>
-	<script src="js/Chess.js"></script>
 	<script src="js/Mesh.js"></script>
 	<script src="js/Material.js"></script>
 	<script src="js/MultiMesh.js"></script>
-	<script src="js/ClippedQuadric.js"></script>
 	<script src="js/QuadGeometry.js"></script>
 	<script src="js/TexturedQuadGeometry.js"></script>
 	<script src="js/TexturedIndexedTrianglesGeometry.js"></script>
