game prototype finished with prompts and collision detection

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<div id="container">
 	  <canvas id="canvas"></canvas>
 	  <div id="overlay"></div>
-		<div id="background"></div>
+		<div id="health"></div>
+		<div id="score"></div>
 	</div>
 
 	<script src="./WebGLMath/js/Mat4.js"></script>​
@@ -42,7 +43,9 @@
 	<script src="js/shaders/shadow_fs.essl"></script>
 	<script src="js/shaders/sky_fs.essl"></script>
 
-	<script src="js/AzAuto.js"></script>
+	<!-- <script src="js/AzAuto.js"></script> -->
+	<script src="js/ClippedQuadric.js"></script>
+	<script src="js/QuadricObject.js"></script>
 	<script src="js/PerspectiveCamera.js"></script>
 	<script src="js/GameObject.js"></script>
 	<script src="js/Mesh.js"></script>
